@@ -5,11 +5,11 @@ import java.io.FileReader;
 import java.util.Properties;
 
 // java -jar ms_front.jar --module-path D:\dev\jdk\openjfx-13.0.1_windows-x64_bin-sdk\javafx-sdk-13.0.1\lib --add-modules=javafx.controls
-
+// java -jar ms_front.jar --module-path %PATH_TO_FX% --add-modules=javafx.controls
 
 // java --module-path %PATH_TO_FX% --add-modules javafx.controls HelloFX
 
-set PATH_TO_FX="D:\\dev\\jdk\\openjfx-13.0.1_windows-x64_bin-sdk\\javafx-sdk-13.0.1\\lib"
+// set PATH_TO_FX="D:\\dev\\jdk\\openjfx-13.0.1_windows-x64_bin-sdk\\javafx-sdk-13.0.1\\lib"
 
 public class EnvVars {
 
